--- a/presentation.html
+++ b/presentation.html
@@ -194,7 +194,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="44">
+<div class="cell-output cell-output-display" data-execution_count="2">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -290,7 +290,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="45">
+<div class="cell-output cell-output-display" data-execution_count="3">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -345,16 +345,20 @@ Table&nbsp;2
 </div>
 </div>
 </section>
+<div class="columns">
+<div class="column">
 <section id="pairwise-relationships" class="slide level2">
 <h2>Pairwise Relationships</h2>
 <p>GDP per capita is strongly and positively associated with life expectancy, while both indicators display only weak relationships with health expenditure as a share of GDP.</p>
 <p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p>
+</section>
+</div><div class="column">
 <div id="cell-fig-pairwise" class="cell" data-fig-height="5" data-fig-width="5" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
 <div aria-describedby="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="708" height="708">
+<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="711" height="711">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and health expenditure (% of GDP).
@@ -363,12 +367,17 @@ Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and
 </div>
 </div>
 </div>
-</section>
+</div><div class="columns">
+<div class="column">
 <section id="gdp-vs.-life-expectancy" class="slide level2">
 <h2>GDP vs.&nbsp;Life Expectancy</h2>
-<p>This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries, suggesting diminishing returns from income on health outcomes.</p>
-<p>This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”.</p>
-<p>In other words, improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on innovation, public health policy, and system efficiency than on GDP growth alone.</p>
+<ul>
+<li class="fragment"><p>This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries, suggesting diminishing returns from income on health outcomes.</p></li>
+<li class="fragment"><p>This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”.</p></li>
+<li class="fragment"><p>Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on other factors.</p></li>
+</ul>
+</section>
+</div><div class="column">
 <div id="cell-fig-gdp-life" class="cell" data-execution_count="5">
 <div class="cell-output cell-output-display">
 <div id="fig-gdp-life" class="quarto-float quarto-figure quarto-figure-center">
@@ -383,7 +392,8 @@ Figure&nbsp;2: Relationship between GDP per capita and life expectancy. Source: 
 </div>
 </div>
 </div>
-</section>
+</div><div class="columns">
+<div class="column">
 <section id="health-expenditure-vs.-life-expectancy-clusters" class="slide level2">
 <h2>Health Expenditure vs.&nbsp;Life Expectancy (Clusters)</h2>
 <p>Overall: The relationship between health spending and life expectancy varies across country clusters, reflecting differences in health system efficiency.</p>
@@ -395,6 +405,8 @@ Figure&nbsp;2: Relationship between GDP per capita and life expectancy. Source: 
 <li class="fragment"><p>Cluster 0 (green): Middle-income, developing systems where higher spending still yields measurable life-expectancy gains.</p></li>
 <li class="fragment"><p>Cluster 2 (blue): Low-income or inefficient systems that spend more (10–20 % of GDP) yet achieve shorter lifespans (~50–70 yrs).</p></li>
 </ul>
+</section>
+</div><div class="column">
 <div id="cell-fig-health-clusters" class="cell" data-execution_count="6">
 <div class="cell-output cell-output-display">
 <div id="fig-health-clusters" class="quarto-float quarto-figure quarto-figure-center">
@@ -409,8 +421,7 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 </div>
 </div>
 </div>
-</section>
-<section id="key-statistics" class="slide level2">
+</div><section id="key-statistics" class="slide level2">
 <h2>Key Statistics</h2>
 <p>The U.S. Healthcare Paradox:</p>
 <ul>
@@ -426,37 +437,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="49">
+<div class="cell-output cell-output-display" data-execution_count="7">
 <style type="text/css">
 </style>
 
-<table id="T_4d27f" class="do-not-create-environment cell caption-top">
+<table id="T_f6bb4" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_4d27f_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_4d27f_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_4d27f_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_4d27f_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_f6bb4_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_f6bb4_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_f6bb4_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_f6bb4_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_4d27f_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_4d27f_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_4d27f_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_4d27f_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_f6bb4_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_f6bb4_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_f6bb4_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_f6bb4_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_4d27f_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_4d27f_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_4d27f_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_4d27f_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_f6bb4_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_f6bb4_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_f6bb4_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_f6bb4_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_4d27f_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_4d27f_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_4d27f_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_4d27f_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_f6bb4_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_f6bb4_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_f6bb4_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_f6bb4_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
@@ -465,8 +476,7 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 </figure>
 </div>
 </div>
-</section>
-<section id="conclusion" class="slide level2">
+</section><section id="conclusion" class="slide level2">
 <h2>Conclusion</h2>
 <ul>
 <li class="fragment"><strong>Global trends:</strong>
@@ -487,14 +497,16 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 </ul></li>
 </ul>
 <p><strong><em>Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.</em></strong></p>
-</section>
-<section id="references" class="slide level2 smaller scrollable">
+</section><section id="references" class="slide level2 smaller scrollable">
 <h2>References</h2>
 <div id="refs" role="list">
 
 </div>
 
 </section>
+</div>
+</div>
+</div>
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
