--- a/presentation.html
+++ b/presentation.html
@@ -33,6 +33,7 @@
     div.csl-bib-body { }
     div.csl-entry {
       clear: both;
+      margin-bottom: 0em;
     }
     .hanging-indent div.csl-entry {
       margin-left:2em;
@@ -194,7 +195,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="2">
+<div class="cell-output cell-output-display" data-execution_count="9">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -290,7 +291,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="3">
+<div class="cell-output cell-output-display" data-execution_count="10">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -358,7 +359,7 @@ Table&nbsp;2
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
 <div aria-describedby="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="711" height="711">
+<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="708" height="708">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and health expenditure (% of GDP).
@@ -427,8 +428,8 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 <ul>
 <li class="fragment"><p>Extreme wealth, modest outcomes: The U.S. is one of the richest nations (GDP per capita ≈ $77,900) yet achieves lower life expectancy than its high-income peers.</p></li>
 <li class="fragment"><p>Diminishing returns: Reflecting McKinsey (2023), further income growth yields smaller health gains once basic needs are met.</p></li>
-<li class="fragment"><p>High spending, low efficiency: The U.S. spends 16.5% of GDP on healthcare—about double the high-income average—but life expectancy (77.4 years) lags nearly four years behind.</p></li>
-<li class="fragment"><p>Outlier status: As shown in <a href="#/fig-health-clusters" class="quarto-xref">Figure&nbsp;3</a>, the U.S. stands out as an inefficient system, supporting Our World in Data (2024) findings that efficiency and equity, not spending volume, drive future health improvements.</p></li>
+<li class="fragment"><p>High spending, low efficiency: The U.S. spends 16.5% of GDP on healthcare—about double the high-income average—but life expectancy (77.4 years) lags nearly four years behind. [ourworldindata_us_life_expectancy]</p></li>
+<li class="fragment"><p>Outlier status: As shown in <a href="#/fig-health-clusters" class="quarto-xref">Figure&nbsp;3</a>, the U.S. stands out as an inefficient system, supporting Our World in Data (2024) findings that efficiency and equity, not spending volume, drive future health improvements. [ourworldindata_life_expectancy_vs_health_expenditure]</p></li>
 </ul>
 <div class="cell" data-execution_count="7">
 <div id="tbl-usa-comparison" class="cell quarto-float quarto-figure quarto-figure-center" data-execution_count="7">
@@ -437,37 +438,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="7">
+<div class="cell-output cell-output-display" data-execution_count="14">
 <style type="text/css">
 </style>
 
-<table id="T_f6bb4" class="do-not-create-environment cell caption-top">
+<table id="T_438e8" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_f6bb4_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_f6bb4_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_f6bb4_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_f6bb4_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_438e8_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_438e8_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_438e8_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_438e8_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_f6bb4_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_f6bb4_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_f6bb4_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_f6bb4_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_438e8_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_438e8_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_438e8_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_438e8_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_f6bb4_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_f6bb4_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_f6bb4_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_f6bb4_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_438e8_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_438e8_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_438e8_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_438e8_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_f6bb4_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_f6bb4_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_f6bb4_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_f6bb4_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_438e8_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_438e8_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_438e8_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_438e8_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
@@ -493,14 +494,16 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 <li class="fragment"><strong>The U.S. paradox:</strong>
 <ul>
 <li class="fragment">The United States exemplifies inefficiency — spending 16.5% of GDP on healthcare yet ranking below peers in life expectancy.</li>
-<li class="fragment">Confirms findings from McKinsey (2023) and Our World in Data (2024) that system efficiency, equity, and innovation are now the main drivers of health gains, not wealth alone.</li>
+<li class="fragment">Confirms findings from McKinsey (2023) and Our World in Data (2024) that system efficiency, equity, and innovation are now the main drivers of health gains, not wealth alone. <span class="citation" data-cites="mckinsey_pixels_progress_ch3">(<a href="#/references" role="doc-biblioref" onclick="">Institute 2022</a>)</span></li>
 </ul></li>
 </ul>
 <p><strong><em>Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.</em></strong></p>
 </section><section id="references" class="slide level2 smaller scrollable">
 <h2>References</h2>
-<div id="refs" role="list">
-
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-mckinsey_pixels_progress_ch3" class="csl-entry" role="listitem">
+Institute, McKinsey Global. 2022. <span>“The Relationship Between Income and Health.”</span> <a href="https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3" class="uri">https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3</a>. <a href="https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3">https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3</a>.
+</div>
 </div>
 
 </section>
