--- a/presentation.html
+++ b/presentation.html
@@ -195,7 +195,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="9">
+<div class="cell-output cell-output-display" data-execution_count="16">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -291,7 +291,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="10">
+<div class="cell-output cell-output-display" data-execution_count="17">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -368,7 +368,9 @@ Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and
 </div>
 </div>
 </div>
-</div><div class="columns">
+</div>
+</div>
+<div class="columns">
 <div class="column">
 <section id="gdp-vs.-life-expectancy" class="slide level2">
 <h2>GDP vs.&nbsp;Life Expectancy</h2>
@@ -393,7 +395,9 @@ Figure&nbsp;2: Relationship between GDP per capita and life expectancy. Source: 
 </div>
 </div>
 </div>
-</div><div class="columns">
+</div>
+</div>
+<div class="columns">
 <div class="column">
 <section id="health-expenditure-vs.-life-expectancy-clusters" class="slide level2">
 <h2>Health Expenditure vs.&nbsp;Life Expectancy (Clusters)</h2>
@@ -422,7 +426,9 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 </div>
 </div>
 </div>
-</div><section id="key-statistics" class="slide level2">
+</div>
+</div>
+<section id="key-statistics" class="slide level2">
 <h2>Key Statistics</h2>
 <p>The U.S. Healthcare Paradox:</p>
 <ul>
@@ -438,37 +444,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="14">
+<div class="cell-output cell-output-display" data-execution_count="21">
 <style type="text/css">
 </style>
 
-<table id="T_438e8" class="do-not-create-environment cell caption-top">
+<table id="T_5f15a" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_438e8_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_438e8_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_438e8_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_438e8_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_5f15a_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_5f15a_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_5f15a_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_5f15a_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_438e8_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_438e8_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_438e8_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_438e8_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_5f15a_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_5f15a_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_5f15a_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_5f15a_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_438e8_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_438e8_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_438e8_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_438e8_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_5f15a_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_5f15a_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_5f15a_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_5f15a_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_438e8_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_438e8_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_438e8_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_438e8_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_5f15a_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_5f15a_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_5f15a_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_5f15a_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
@@ -477,7 +483,8 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 </figure>
 </div>
 </div>
-</section><section id="conclusion" class="slide level2">
+</section>
+<section id="conclusion" class="slide level2">
 <h2>Conclusion</h2>
 <ul>
 <li class="fragment"><strong>Global trends:</strong>
@@ -498,7 +505,8 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 </ul></li>
 </ul>
 <p><strong><em>Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.</em></strong></p>
-</section><section id="references" class="slide level2 smaller scrollable">
+</section>
+<section id="references" class="slide level2 smaller scrollable">
 <h2>References</h2>
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-mckinsey_pixels_progress_ch3" class="csl-entry" role="listitem">
@@ -507,9 +515,6 @@ Institute, McKinsey Global. 2022. <span>“The Relationship Between Income and H
 </div>
 
 </section>
-</div>
-</div>
-</div>
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
