--- a/presentation.html
+++ b/presentation.html
@@ -346,14 +346,10 @@ Table&nbsp;2
 </div>
 </div>
 </section>
-<div class="columns">
-<div class="column">
 <section id="pairwise-relationships" class="slide level2">
 <h2>Pairwise Relationships</h2>
 <p>GDP per capita is strongly and positively associated with life expectancy, while both indicators display only weak relationships with health expenditure as a share of GDP.</p>
 <p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p>
-</section>
-</div><div class="column">
 <div id="cell-fig-pairwise" class="cell" data-fig-height="5" data-fig-width="5" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
@@ -368,10 +364,7 @@ Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and
 </div>
 </div>
 </div>
-</div>
-</div>
-<div class="columns">
-<div class="column">
+</section>
 <section id="gdp-vs.-life-expectancy" class="slide level2">
 <h2>GDP vs.&nbsp;Life Expectancy</h2>
 <ul>
@@ -379,8 +372,6 @@ Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and
 <li class="fragment"><p>This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”.</p></li>
 <li class="fragment"><p>Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and longevity improvements depend more on other factors.</p></li>
 </ul>
-</section>
-</div><div class="column">
 <div id="cell-fig-gdp-life" class="cell" data-execution_count="5">
 <div class="cell-output cell-output-display">
 <div id="fig-gdp-life" class="quarto-float quarto-figure quarto-figure-center">
@@ -395,10 +386,7 @@ Figure&nbsp;2: Relationship between GDP per capita and life expectancy. Source: 
 </div>
 </div>
 </div>
-</div>
-</div>
-<div class="columns">
-<div class="column">
+</section>
 <section id="health-expenditure-vs.-life-expectancy-clusters" class="slide level2">
 <h2>Health Expenditure vs.&nbsp;Life Expectancy (Clusters)</h2>
 <p>Overall: The relationship between health spending and life expectancy varies across country clusters, reflecting differences in health system efficiency.</p>
@@ -410,8 +398,6 @@ Figure&nbsp;2: Relationship between GDP per capita and life expectancy. Source: 
 <li class="fragment"><p>Cluster 0 (green): Middle-income, developing systems where higher spending still yields measurable life-expectancy gains.</p></li>
 <li class="fragment"><p>Cluster 2 (blue): Low-income or inefficient systems that spend more (10–20 % of GDP) yet achieve shorter lifespans (~50–70 yrs).</p></li>
 </ul>
-</section>
-</div><div class="column">
 <div id="cell-fig-health-clusters" class="cell" data-execution_count="6">
 <div class="cell-output cell-output-display">
 <div id="fig-health-clusters" class="quarto-float quarto-figure quarto-figure-center">
@@ -426,8 +412,7 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 </div>
 </div>
 </div>
-</div>
-</div>
+</section>
 <section id="key-statistics" class="slide level2">
 <h2>Key Statistics</h2>
 <p>The U.S. Healthcare Paradox:</p>
@@ -448,33 +433,33 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 <style type="text/css">
 </style>
 
-<table id="T_2ec49" class="do-not-create-environment cell caption-top">
+<table id="T_30629" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_2ec49_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_2ec49_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_2ec49_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_2ec49_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_30629_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_30629_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_30629_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_30629_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_2ec49_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_2ec49_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_2ec49_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_2ec49_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_30629_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_30629_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_30629_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_30629_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_2ec49_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_2ec49_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_2ec49_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_2ec49_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_30629_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_30629_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_30629_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_30629_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_2ec49_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_2ec49_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_2ec49_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_2ec49_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_30629_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_30629_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_30629_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_30629_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
